# iCloud-to-Google-Calender

./: .gitignore  AppScript.gs  Appscript.gs  Appscript.js  LICENSE  README.md  RunTimeTableScript.cmd  cerdential.txt  data.py  functionsForTableAndLectures.py  main.py  processAttendence.py  processTable.py  projectImports.py  requirement.txt  seleniumFunctions.py  setup.gs
iCloud-to-Google-Calender/: pyproject.toml
iCloud-to-Google-Calender/iCloudToGCal/: __init__.py
iCloud-to-Google-Calender/iCloudToGCal/GUI/: GUI.py
iCloud-to-Google-Calender/iCloudToGCal/chromedriver/: installDriver.py
iCloud-to-Google-Calender/iCloudToGCal/processdata/: data.py  processAttendence.py  processTable.py
iCloud-to-Google-Calender/iCloudToGCal/selenuimFunctions/: Gform.py  iCloud.py
