[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "iCloudToGCal"
version = "1.0.0"
description = "Sync iCloud events to Google Calendar"
authors = ["Rohit <rohitmalik987789@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
selenium = "^3.141.0"
bs4 = "^0.0.1"
setuptools = "^57.5.0"
beautifulsoup4 = "^4.9.3"
customtkinter = "^5.1.2"
requests = "^2.28.2"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
icloud_run_script = "iCloudToGCal:run_script"
icloud_config = "iCloudToGCal:config"

[tool.poetry.extras]
